# modern-python-project

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py
src/modern_python/: console.py  wikipedia.py
src/modern_python_project.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_console.py  test_wikipedia.py
