[tool.poetry]
name = "modern-python-project"
version = "0.1.0"
description = "Testing modern python tools"
authors = ["LuckyDams <luckydams@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LuckyDams/modern-python-project.git"
repository = "https://github.com/LuckyDams/modern-python-project.git"
keywords = ["modern", "python", "project", "tools"]
packages = [
    { include = "modern_python", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.23.0"
desert = "^2020.1.6"
marshmallow = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
pytest-mock = "^3.1.0"
black = "^19.10b0"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.770"
pytype = {version = "^2020.5.13", python = "3.7"}

[tool.poetry.scripts]
modern-python = "modern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
